# groth16-solana

./: .gitignore  Cargo.toml  package-lock.json  package.json  parse_vk_to_rust.js
.github/actions/setup/: action.yml
.github/workflows/: rust-tests.yml
src/: bn254.rs  decompression.rs  errors.rs  groth16.rs  lib.rs  proof_parser.rs  vk_parser.rs
tests/rust-vk/: Cargo.toml  README.md  build.rs  package-lock.json  package.json
tests/rust-vk/circuits/: README.md  compressed_account_merkle_proof.circom
tests/rust-vk/scripts/: setup.sh
tests/rust-vk/src/: lib.rs  verifying_key.rs
