[workspace]
members = [".", "tests/rust-vk"]
resolver = "2"

[package]
name = "groth16-solana"
version = "0.2.0"
edition = "2021"
description = "groth16 verification with solana alt_bn128 syscalls"
repository = "https://github.com/Lightprotocol/groth16-solana"
license = "MIT"

[dependencies]
solana-bn254 = "2"
thiserror = "1.0"
ark-serialize = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-bn254 = "0.5"
num-bigint = "0.4.6"
serde = { version = "1.0.195", optional = true, features = ["derive"] }
serde_json = { version = "1.0.111", optional = true }
circom-prover = { version = "0.1", optional = true }
ark-groth16 = { version = "0.5", optional = true }


[dev-dependencies]
ark-std = "0.5"
array-bytes = "6.2.2"
serde = "1.0.195"
serde_json = "1.0.111"

[features]
vk = ["serde", "serde_json"]
circom = ["circom-prover", "ark-groth16"]
