[workspace]
members = [".", "tests/rust-vk"]
resolver = "2"

[package]
name = "pinocchio-groth16"
version = "0.2.0"
edition = "2021"
description = "groth16 verification with solana alt_bn128 syscalls"
repository = "https://github.com/vitorpy/groth16-solana"
license = "MIT"

[dependencies]
pinocchio = "0.9"
thiserror = { version = "1.0", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
num-bigint = { version = "0.4.6", default-features = false }
serde = { version = "1.0.195", optional = true, default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.111", optional = true, default-features = false, features = ["alloc"] }
circom-prover = { version = "0.1", optional = true }
ark-groth16 = { version = "0.5", optional = true, default-features = false }


[dev-dependencies]
ark-std = "0.5"
array-bytes = "6.2.2"
serde = "1.0.195"
serde_json = "1.0.111"

[features]
default = []
std = []
vk = ["std", "serde", "serde_json"]
circom = ["circom-prover", "ark-groth16"]
